# WiggleKiller

./: .gitignore  CMakeLists.txt  README.md  README.txt  input.txt  makefile
etc/: t1lcal_testing.txt  t1lcal_testing_barf.txt  t1rcal_testing.txt  t1rcal_testing_barf.txt  t2lcal_testing.txt  t2lcal_testing_barf.txt  t2rcal_testing.txt  t2rcal_testing_barf.txt
include/: CutHandler.h  DataStructs.h
src/: CMakeLists.txt  CubicSpline.cpp  CubicSpline.h  CutHandler.cpp  CutHandler.h  FP_kinematics.cpp  FP_kinematics.h  Histogrammer.cpp  Histogrammer.h  MassLookup.cpp  MassLookup.h  RandomGenerator.cpp  RandomGenerator.h  WiggleCorrector.cpp  WiggleCorrector.h  WiggleKiller.cpp  WiggleKiller.h  main.cpp  sps_dict.cxx
src/SPSDict/: CMakeLists.txt  DataStructs.h
